--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,9 +107,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignEnd="@id/main_activity_password"
-        android:layout_alignBottom="@id/main_activity_password"
+        android:layout_below="@id/main_activity_password_text_view"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="40dp"
         android:background="@drawable/icon_open_eye"
         android:alpha="0.7"
         android:tag="1"
