--- a/app/src/main/res/layout/window_change_password.xml
+++ b/app/src/main/res/layout/window_change_password.xml
@@ -11,7 +11,7 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/background_settings" />
+        android:background="@drawable/background_menu" />
 
     <ImageButton
         android:id="@+id/change_password_cross"
@@ -24,6 +24,18 @@
         android:background="@drawable/cross"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
          />
+
+    <ImageButton
+        android:id="@+id/change_password_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignTop="@id/change_password_background"
+        android:layout_alignStart="@id/change_password_background"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/arrow_back"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
+        />
 
     <TextView
         android:id="@+id/change_password_old_text"
@@ -38,7 +50,7 @@
         android:layout_below="@id/change_password_cross"
         android:layout_alignStart="@id/change_password_background"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="10dp"
         />
 
 
@@ -65,7 +77,7 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -76,9 +88,9 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignEnd="@id/change_password_old"
-        android:layout_alignBottom="@id/change_password_old"
+        android:layout_below="@id/change_password_old_text"
+        android:layout_marginTop="-5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="30dp"
         android:alpha="0.7"
         android:background="@drawable/icon_open_eye"
         android:tag="1"
@@ -123,7 +135,7 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -135,9 +147,9 @@
         android:layout_height="30dp"
         android:background="@drawable/icon_open_eye"
         android:layout_alignEnd="@id/change_password_new"
-        android:layout_alignBottom="@id/change_password_new"
+        android:layout_below="@id/change_password_new_text"
+        android:layout_marginTop="-5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="30dp"
         android:alpha="0.7"
         android:tag="1"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
@@ -182,7 +194,7 @@
             android:maxLength="15"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:fontFamily="@font/minecraftia_regular"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -194,9 +206,9 @@
         android:layout_height="30dp"
         android:background="@drawable/icon_open_eye"
         android:layout_alignEnd="@id/change_password_repeat"
-        android:layout_alignBottom="@id/change_password_repeat"
+        android:layout_below="@id/change_password_repeat_text"
+        android:layout_marginTop="-5dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="30dp"
         android:alpha="0.7"
         android:tag="1"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
@@ -206,18 +218,18 @@
         android:id="@+id/change_password_button"
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_alignBottom="@id/change_password_background"
+        android:layout_below="@id/change_password_repeat"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/button_menu"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_alignBottom="@id/change_password_background"
+        android:layout_below="@id/change_password_repeat"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="15dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:letterSpacing="0.07"
