--- a/app/src/main/res/layout/window_menu.xml
+++ b/app/src/main/res/layout/window_menu.xml
@@ -7,48 +7,40 @@
     >
 
     <ImageView
-        android:id="@+id/settings_background"
+        android:id="@+id/menu_background"
         android:layout_width="300dp"
         android:layout_height="400dp"
-        android:background="@drawable/background_settings"
+        android:background="@drawable/background_menu"
         android:layout_centerInParent="true"
         />
 
     <ImageButton
-        android:id="@+id/settings_cross"
+        android:id="@+id/menu_cross"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignTop="@id/settings_background"
-        android:layout_alignEnd="@id/settings_background"
+        android:layout_alignTop="@id/menu_background"
+        android:layout_alignEnd="@id/menu_background"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/cross"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
 
-    <TextView
-        android:id="@+id/settings_change_password"
+    <ListView
+        android:id="@+id/menu_list"
         android:layout_width="250dp"
-        android:layout_height="45dp"
-        android:text="@string/change_password"
-        android:layout_below="@id/settings_cross"
-        android:layout_alignStart="@id/settings_background"
+        android:layout_height="200dp"
+        android:layout_below="@id/menu_cross"
+        android:layout_alignStart="@id/menu_background"
         android:layout_marginTop="15dp"
         android:layout_marginStart="30dp"
-        android:textColor="@color/white"
-        android:textSize="14sp"
-        android:letterSpacing="0.07"
-        android:fontFamily="@font/minecraftia_regular"
-        android:textAllCaps="true"
-        android:paddingStart="20dp"
-        android:drawablePadding="40dp"
         />
 
     <ImageButton
-        android:id="@+id/settings_choose"
+        android:id="@+id/menu_choose"
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_alignBottom="@id/settings_background"
+        android:layout_alignBottom="@id/menu_background"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:background="@drawable/button_menu"
@@ -57,7 +49,7 @@
     <TextView
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_alignBottom="@id/settings_background"
+        android:layout_alignBottom="@id/menu_background"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:textColor="@color/white"
