--- a/app/src/main/res/layout/activity_restore_code.xml
+++ b/app/src/main/res/layout/activity_restore_code.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/background"
     android:scaleType="center"
     tools:context=".screens.RestoreCodeActivity">
 
@@ -12,69 +12,68 @@
         android:id="@+id/restore_activity_background_login"
         android:layout_width="300dp"
         android:layout_height="400dp"
-        android:alpha="0.7"
-        android:layout_centerInParent="true"
-        android:background="@color/grey_blue"
-        tools:ignore="MissingConstraints"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="220dp"
+        android:background="@drawable/background_menu" />
 
     <ImageButton
         android:id="@+id/restore_activity_back"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignStart="@id/restore_activity_background_login"
         android:layout_alignTop="@id/restore_activity_background_login"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/back"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <ImageButton
-        android:id="@+id/restore_activity_home"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/home"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/arrow_back"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/restore_activity_restore_password"
+        android:id="@+id/restore_activity_enter_code_text"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:text="@string/code_from_sms"
-        android:layout_alignTop="@id/restore_activity_background_login"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_vertical"
-        android:textSize="21sp"
-        android:textColor="@color/color_hint"
-        android:textStyle="bold"
-        android:layout_marginTop="80dp"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:layout_below="@id/restore_activity_back"
+        android:layout_alignStart="@id/restore_activity_background_login"
+        android:layout_marginStart="50dp"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
         />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/restore_activity_cell_code1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/restore_activity_restore_password"
+        android:layout_below="@id/restore_activity_enter_code_text"
         android:layout_alignStart="@id/restore_activity_background_login"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
         app:errorEnabled="true"
+        app:hintAnimationEnabled="false"
+        app:errorTextAppearance="@style/ErrorText"
         app:errorIconDrawable="@android:color/transparent"
         app:boxStrokeWidth="3dp">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/restore_activity_cell_code1_text"
-        android:layout_width="60dp"
-        android:layout_height="80dp"
-        android:background="@color/white"
-        android:paddingStart="15dp"
-        android:paddingTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@android:color/transparent"
         android:inputType="number"
         android:imeOptions="actionNext"
-        android:textSize="50sp"
+        android:paddingBottom="-5dp"
+        android:paddingTop="10dp"
+        android:paddingStart="10dp"
+        android:textSize="28sp"
+        android:gravity="center_horizontal"
         android:maxLength="1"
+        android:textColor="@color/white"
+        android:fontFamily="@font/minecraftia_regular"
         tools:ignore="SpeakableTextPresentCheck"
         />
     </com.google.android.material.textfield.TextInputLayout>
@@ -83,24 +82,31 @@
         android:id="@+id/restore_activity_cell_code2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/restore_activity_restore_password"
+        android:layout_below="@id/restore_activity_enter_code_text"
         android:layout_toEndOf="@id/restore_activity_cell_code1"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:errorEnabled="true"
+        app:hintAnimationEnabled="false"
+        app:errorTextAppearance="@style/ErrorText"
         app:errorIconDrawable="@android:color/transparent"
         app:boxStrokeWidth="3dp">
+
     <EditText
         android:id="@+id/restore_activity_cell_code2_text"
-        android:layout_width="60dp"
-        android:layout_height="80dp"
-        android:background="@color/white"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@android:color/transparent"
         android:inputType="number"
         android:imeOptions="actionNext"
-        android:paddingStart="15dp"
-        android:paddingTop="0dp"
-        android:textSize="50sp"
+        android:paddingBottom="-5dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="28sp"
+        android:gravity="center_horizontal"
         android:maxLength="1"
+        android:textColor="@color/white"
+        android:fontFamily="@font/minecraftia_regular"
         tools:ignore="SpeakableTextPresentCheck"
         />
     </com.google.android.material.textfield.TextInputLayout>
@@ -109,25 +115,31 @@
         android:id="@+id/restore_activity_cell_code3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/restore_activity_restore_password"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_below="@id/restore_activity_enter_code_text"
         android:layout_toEndOf="@id/restore_activity_cell_code2"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         app:errorEnabled="true"
+        app:hintAnimationEnabled="false"
+        app:errorTextAppearance="@style/ErrorText"
         app:errorIconDrawable="@android:color/transparent"
         app:boxStrokeWidth="3dp">
 
     <EditText
         android:id="@+id/restore_activity_cell_code3_text"
-        android:layout_width="60dp"
-        android:layout_height="80dp"
-        android:background="@color/white"
-        android:imeOptions="actionNext"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@android:color/transparent"
         android:inputType="number"
-        android:paddingStart="15dp"
-        android:paddingTop="0dp"
-        android:textSize="50sp"
+        android:imeOptions="actionNext"
+        android:paddingBottom="-5dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="28sp"
+        android:gravity="center_horizontal"
         android:maxLength="1"
+        android:textColor="@color/white"
+        android:fontFamily="@font/minecraftia_regular"
         tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -135,50 +147,135 @@
         android:id="@+id/restore_activity_cell_code4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/restore_activity_restore_password"
+        android:layout_below="@id/restore_activity_enter_code_text"
         android:layout_toEndOf="@id/restore_activity_cell_code3"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:errorEnabled="true"
+        app:hintAnimationEnabled="false"
+        app:errorTextAppearance="@style/ErrorText"
         app:errorIconDrawable="@android:color/transparent"
         app:boxStrokeWidth="3dp">
 
     <EditText
         android:id="@+id/restore_activity_cell_code4_text"
-        android:layout_width="60dp"
-        android:layout_height="80dp"
-        android:background="@color/white"
+        android:layout_width="50dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@android:color/transparent"
         android:inputType="number"
-        android:paddingStart="15dp"
-        android:paddingTop="0dp"
-        android:textSize="50sp"
+        android:imeOptions="actionNext"
+        android:paddingBottom="-5dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:textSize="28sp"
+        android:gravity="center_horizontal"
         android:maxLength="1"
+        android:textColor="@color/white"
+        android:fontFamily="@font/minecraftia_regular"
         tools:ignore="SpeakableTextPresentCheck"
         />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="218dp"
-        android:layout_height="57dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@id/restore_activity_change_button"
-        android:layout_alignTop="@id/restore_activity_change_button"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
+    <TextView
+        android:id="@+id/restore_activity_info_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/info_phone"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:layout_below="@id/restore_activity_cell_code1"
+        android:layout_alignStart="@id/restore_activity_background_login"
+        android:layout_marginStart="50dp"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:id="@+id/restore_activity_info_unit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/info_unit"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:layout_below="@id/restore_activity_info_phone"
+        android:layout_alignStart="@id/restore_activity_background_login"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="0dp"
         />
 
     <Button
-        android:id="@+id/restore_activity_change_button"
-        android:layout_width="210dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/restore_activity_cell_code1"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/change_password"
-        android:textStyle="bold"
-        android:textSize="17sp"
-        app:cornerRadius="0dp"
+        android:id="@+id/restore_activity_request_again"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:background="@android:color/transparent"
+        android:textColor="@color/white"
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp"
+        android:gravity="start"
+        android:text="@string/request_again"
+        android:textSize="13sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:layout_below="@id/restore_activity_info_unit"
+        android:layout_alignStart="@id/restore_activity_background_login"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="-5dp"
+        android:clickable="false"
         />
 
+    <TextView
+        android:id="@+id/restore_activity_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/timer"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:layout_below="@id/restore_activity_request_again"
+        android:layout_alignStart="@id/restore_activity_background_login"
+        android:layout_marginStart="50dp"
+        android:gravity="center"
+        android:layout_marginTop="-10dp"
+        />
+
+    <ImageButton
+        android:id="@+id/restore_activity_change_button"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/restore_activity_timer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_menu"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cornerRadius="0dp"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <TextView
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/restore_activity_timer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:letterSpacing="0.07"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:shadowColor="@color/black"
+        android:shadowRadius="5"
+        android:shadowDx="10"
+        android:text="@string/change_button"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        />
 </RelativeLayout>
