--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/background_area"
-         />
+        android:background="@drawable/background_area" />
 
     <TextView
         android:id="@+id/main_activity_login_text_view"
@@ -37,8 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignTop="@id/main_activity_background_login"
-        android:layout_marginTop="50dp"
+        android:layout_alignTop="@id/main_activity_login_text_view"
+        android:layout_marginTop="10dp"
         app:errorEnabled="true"
         app:hintAnimationEnabled="false"
         app:errorTextAppearance="@style/ErrorText"
@@ -79,8 +78,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/main_activity_phone"
-        android:layout_marginTop="30dp"
+        android:layout_alignTop="@id/main_activity_password_text_view"
+        android:layout_marginTop="10dp"
         android:textColorHint="@color/color_hint"
         app:errorEnabled="true"
         app:hintAnimationEnabled="false"
@@ -123,6 +122,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/button"
+        android:foreground="?android:attr/selectableItemBackground"
         android:text="@string/login_button"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -150,8 +150,9 @@
     <Button
         android:id="@+id/main_activity_forgot_password"
         android:layout_width="180dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_below="@id/main_activity_login_button"
+        android:padding="0dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
@@ -161,5 +162,6 @@
         android:letterSpacing="0.07"
         android:fontFamily="@font/minecraftia_regular"
         android:textSize="12sp"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck" />
 </RelativeLayout>
