--- a/app/src/main/res/layout/activity_personal_area_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_area_teacher.xml
@@ -4,188 +4,200 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
-
-    <ImageButton
-        android:id="@+id/personal_area_teacher_logout"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/exit"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
-    </ImageButton>
-
-    <TextView
-        android:id="@+id/personal_area_teacher_area"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/white"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:letterSpacing="0.07"
-        android:text="@string/personal_area"
-        >
-    </TextView>
+    android:background="@color/background">
 
     <ImageButton
         android:id="@+id/personal_area_teacher_settings"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/menu"
+        android:background="@drawable/setting"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <ImageView
-        android:id="@+id/personal_area_teacher_buttons"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"
+        android:id="@+id/personal_area_teacher_background"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="65dp"
         android:layout_alignTop="@id/personal_area_teacher_hero"
-        android:layout_alignBottom="@id/personal_area_teacher_regulations_game_shadow"
-        android:layout_marginBottom="-12dp"
-        android:alpha="0.7"
-        android:background="@color/grey_blue">
+        android:background="@drawable/background_area_teacher">
     </ImageView>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/personal_area_teacher_hero"
-        android:layout_width="140dp"
+        android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/feiry"
+        android:background="@drawable/hero_owl"
         tools:ignore="SpeakableTextPresentCheck"
         />
 
     <TextView
         android:id="@+id/personal_area_teacher_last_name"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_width="210dp"
+        android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/personal_area_teacher_hero"
+        android:layout_marginTop="15dp"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:textSize="18sp"
         android:letterSpacing="0.07"
         android:textStyle="bold"
-        android:text=""
-        >
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:text="Иванов">
     </TextView>
 
     <TextView
         android:id="@+id/personal_area_teacher_name"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_width="210dp"
+        android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/personal_area_teacher_last_name"
-        android:layout_marginTop="-10dp"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:gravity="center_horizontal"
+        android:textSize="18sp"
         android:letterSpacing="0.07"
         android:textStyle="bold"
-        android:text=""
-        >
-    </TextView>
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:text="Иван"
+        />
 
     <TextView
         android:id="@+id/personal_area_teacher_patronymic"
-        android:layout_width="300dp"
-        android:layout_height="35dp"
+        android:layout_width="210dp"
+        android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/personal_area_teacher_name"
-        android:layout_marginTop="-10dp"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:gravity="center_horizontal"
+        android:textSize="18sp"
         android:letterSpacing="0.07"
         android:textStyle="bold"
-        android:text=""
-        >
-    </TextView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_teacher_make_room"
-        android:layout_alignTop="@+id/personal_area_teacher_make_room"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
+        android:fontFamily="@font/minecraftia_regular"
+        android:textAllCaps="true"
+        android:text="Иванович"
         />
 
-    <Button
-        android:id="@+id/personal_area_teacher_make_room"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/personal_area_teacher_patronymic"
+    <ImageButton
+        android:id="@+id/personal_area_teacher_play"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_background"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/button"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_background"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="35dp"
+        android:fontFamily="@font/minecraftia_regular"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="10"
+        android:shadowRadius="5"
+        android:text="@string/play"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/personal_area_teacher_tasks"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_play"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/make_room"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:cornerRadius="0dp" />
+        android:background="@drawable/button"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_teacher_list_tasks"
-        android:layout_alignTop="@+id/personal_area_teacher_list_tasks"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
-        android:id="@+id/personal_area_teacher_list_tasks"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/personal_area_teacher_make_room"
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_play"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
-        android:text="@string/list_tasks"
-        android:textStyle="bold"
-        android:textSize="17sp"
+        android:fontFamily="@font/minecraftia_regular"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="10"
+        android:shadowRadius="5"
+        android:text="@string/tasks"
+        android:textAllCaps="true"
         android:textColor="@color/white"
-        app:cornerRadius="0dp">
-    </Button>
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/personal_area_teacher_regulations_game_shadow"
-        android:layout_width="258dp"
-        android:layout_height="70dp"
-        android:backgroundTint="@color/shadow_button"
-        android:layout_alignStart="@+id/personal_area_teacher_regulations_game"
-        android:layout_alignTop="@+id/personal_area_teacher_regulations_game"
-        android:layout_marginTop="6dp"
-        app:cardCornerRadius="0dp"
-        />
-
-    <Button
+    <ImageButton
         android:id="@+id/personal_area_teacher_regulations_game"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_below="@id/personal_area_teacher_list_tasks"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_tasks"
         android:layout_centerInParent="true"
         android:layout_marginTop="15dp"
-        android:backgroundTint="@color/color_buttons"
+        android:background="@drawable/button"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_tasks"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/minecraftia_regular"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="10"
+        android:shadowRadius="5"
         android:text="@string/regulations_game"
-        android:textStyle="bold"
-        android:textSize="17sp"
+        android:textAllCaps="true"
         android:textColor="@color/white"
-        app:cornerRadius="0dp">
-    </Button>
+        android:textSize="28sp"
+        android:textStyle="bold" />
+
+    <ImageButton
+        android:id="@+id/personal_area_teacher_logout"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_regulations_game"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/button"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/personal_area_teacher_regulations_game"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/minecraftia_regular"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp"
+        android:shadowColor="@color/black"
+        android:shadowDx="10"
+        android:shadowRadius="5"
+        android:text="@string/exit"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
