--- a/app/src/main/res/layout/window_change_password.xml
+++ b/app/src/main/res/layout/window_change_password.xml
@@ -22,6 +22,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/cross"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
          />
 
@@ -34,6 +35,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:background="@drawable/arrow_back"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
         />
 
@@ -222,6 +224,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_menu"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
