--- a/app/src/main/res/layout/window_choice_hero.xml
+++ b/app/src/main/res/layout/window_choice_hero.xml
@@ -22,23 +22,49 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/cross"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
+        />
+
+    <ImageButton
+        android:id="@+id/choice_hero_arrow_left"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/arrow_left_small"
+        android:layout_alignStart="@id/choice_hero_background"
+        android:layout_marginStart="20dp"
+        android:layout_centerVertical="true"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
         />
 
     <GridView
         android:id="@+id/choice_hero_grid"
-        android:layout_width="260dp"
-        android:layout_height="220dp"
+        android:layout_width="180dp"
+        android:layout_height="200dp"
         android:layout_below="@id/choice_hero_cross"
-        android:layout_alignStart="@id/choice_hero_background"
-        android:layout_marginStart="20dp"
+        android:layout_alignStart="@id/choice_hero_arrow_left"
+        android:layout_marginStart="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:numColumns="3"
-        android:verticalSpacing="40dp"
-        android:horizontalSpacing="15dp"
+        android:layout_marginTop="50dp"
+        android:numColumns="2"
+        android:verticalSpacing="30dp"
+        android:horizontalSpacing="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:scrollbars="none"
+        />
+
+    <ImageButton
+        android:id="@+id/choice_hero_arrow_right"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/arrow_right_small"
+        android:layout_toEndOf="@id/choice_hero_grid"
+        android:layout_marginStart="-20dp"
+        android:layout_centerVertical="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
         />
 
     <ImageButton
@@ -47,8 +73,9 @@
         android:layout_height="40dp"
         android:layout_alignBottom="@id/choice_hero_background"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_menu"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
@@ -56,7 +83,7 @@
         android:layout_height="40dp"
         android:layout_alignBottom="@id/choice_hero_background"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:letterSpacing="0.07"
