--- a/app/src/main/res/layout/window_code_room.xml
+++ b/app/src/main/res/layout/window_code_room.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:scaleType="center"
-    tools:context=".screens.ForgotPasswordActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/forgot_activity_background_login"
+        android:id="@+id/code_room_background"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true"
@@ -17,11 +14,24 @@
         tools:ignore="MissingConstraints" />
 
     <ImageButton
-        android:id="@+id/forgot_activity_back"
+        android:id="@+id/code_room_cross"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignStart="@id/forgot_activity_background_login"
-        android:layout_alignTop="@id/forgot_activity_background_login"
+        android:layout_alignTop="@id/code_room_background"
+        android:layout_alignEnd="@id/code_room_background"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/cross"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
+        />
+
+    <ImageButton
+        android:id="@+id/code_room_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignStart="@id/code_room_background"
+        android:layout_alignTop="@id/code_room_background"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:background="@drawable/arrow_back"
@@ -29,28 +39,28 @@
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/forgot_activity_phone_text_view"
+        android:id="@+id/code_room_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/phone"
+        android:text="@string/code_room"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:letterSpacing="0.07"
         android:fontFamily="@font/minecraftia_regular"
         android:textAllCaps="true"
-        android:layout_below="@id/forgot_activity_back"
-        android:layout_alignStart="@id/forgot_activity_background_login"
+        android:layout_below="@id/code_room_back"
+        android:layout_alignStart="@id/code_room_background"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
         />
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/forgot_activity_phone"
+        android:id="@+id/code_room_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignTop="@id/forgot_activity_phone_text_view"
+        android:layout_alignTop="@id/code_room_text_view"
         android:layout_marginTop="10dp"
         app:errorEnabled="true"
         app:hintAnimationEnabled="false"
@@ -58,26 +68,26 @@
         app:errorIconDrawable="@android:color/transparent"
         >
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/forgot_activity_phone_text"
-        android:layout_width="240dp"
-        android:layout_height="60dp"
-        android:backgroundTint="@android:color/transparent"
-        android:inputType="phone"
-        android:maxLength="12"
-        android:paddingStart="10dp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/minecraftia_regular"
-        tools:ignore="SpeakableTextPresentCheck"
-        />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/code_room_code_text"
+            android:layout_width="240dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@android:color/transparent"
+            android:inputType="phone"
+            android:maxLength="12"
+            android:paddingStart="10dp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/minecraftia_regular"
+            tools:ignore="SpeakableTextPresentCheck"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <ImageButton
-        android:id="@+id/forgot_activity_get_button"
+        android:id="@+id/code_room_get_button"
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_below="@id/forgot_activity_phone"
+        android:layout_below="@id/code_room_code"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_menu"
@@ -88,7 +98,7 @@
     <TextView
         android:layout_width="180dp"
         android:layout_height="40dp"
-        android:layout_below="@id/forgot_activity_phone"
+        android:layout_below="@id/code_room_code"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:textColor="@color/white"
@@ -100,7 +110,7 @@
         android:shadowColor="@color/black"
         android:shadowRadius="5"
         android:shadowDx="10"
-        android:text="@string/get_code"
+        android:text="@string/login_button"
         android:gravity="center"
         android:paddingTop="5dp"
         />
