--- a/app/src/main/res/layout/window_rules.xml
+++ b/app/src/main/res/layout/window_rules.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +21,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/cross"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
@@ -46,6 +46,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginBottom="60dp"
         android:background="@drawable/arrow_left"
+        android:foreground="?android:attr/selectableItemBackground"
         android:alpha="0.4"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
@@ -58,6 +59,7 @@
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="70dp"
         android:background="@drawable/arrow_right"
+        android:foreground="?android:attr/selectableItemBackground"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 </RelativeLayout>
