implemented pattern mvp

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:scaleType="center"
-    tools:context=".screens.ForgotPasswordActivity">
+    tools:context=".ui.screens.forgotpassword.view.ForgotPasswordActivity">
 
     <ImageView
         android:id="@+id/forgot_activity_background_login"
