--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:scaleType="center"
-    tools:context=".MainActivity">
+    tools:context=".ui.screens.main.view.MainActivity">
 
     <ImageView
         android:id="@+id/main_activity_background_login"
