[+] added logo; [-] removed old files; [+] added work with solved tasks by student

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -9,10 +9,21 @@
     tools:context=".ui.screens.forgotpassword.view.ForgotPasswordActivity">
 
     <ImageView
+        android:id="@+id/forgot_activity_logo"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/logo"
+        />
+
+    <ImageView
         android:id="@+id/forgot_activity_background_login"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/forgot_activity_logo"
+        android:layout_marginTop="30dp"
         android:background="@drawable/background_window"
         tools:ignore="MissingConstraints" />
 
