--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,21 @@
     tools:context=".ui.screens.main.view.MainActivity">
 
     <ImageView
+        android:id="@+id/main_activity_background_logo"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/logo"
+        />
+
+    <ImageView
         android:id="@+id/main_activity_background_login"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/main_activity_background_logo"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/background_area" />
 
     <TextView
