--- a/app/src/main/res/layout/window_menu.xml
+++ b/app/src/main/res/layout/window_menu.xml
@@ -10,9 +10,8 @@
         android:id="@+id/menu_background"
         android:layout_width="300dp"
         android:layout_height="400dp"
-        android:background="@drawable/background_menu"
         android:layout_centerInParent="true"
-        />
+        android:background="@drawable/background_menu" />
 
     <ImageButton
         android:id="@+id/menu_cross"
